# JSON_Processor

./: CMakeLists.txt  README.md
Resources/: classroom.json  sammy.json  stripe.json
Source/: Autograder.cpp  Autograder.h  Debug.h  Formatting.h  JSONParser.cpp  JSONParser.h  Model.cpp  Model.h  Testable.h  main.cpp
Tests/: AdvancedTest.txt  BasicTest.txt  NoFilterTest.txt
